[package]
name = "gitarena"
version = "0.0.1"
authors = ["Mari <me@cutegirl.tech>"]
edition = "2018"
build = "build.rs"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mellowagain/gitarena"

[dependencies]
actix-files = "0.5.0"
actix-identity = "0.3.1"
actix-rt = "1.1.1"
actix-web = "3.2.0"
anyhow = "1.0.41"
askalono = "0.4.3"
async-recursion = "0.3.2"
base64 = "0.13.0"
bstr = "0.2.16"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-humanize = "0.2.1"
fern = "0.6.0"
fs_extra = "1.2.0"
futures = "0.3.16"
git-features = { version = "0.16.3", git = "https://github.com/Byron/gitoxide", branch = "main", features = ["crc32", "rustsha1", "progress", "zlib"] }
git-hash = { version = "0.5.1", git = "https://github.com/Byron/gitoxide", branch = "main" }
git-lock = { version = "1.0.0", git = "https://github.com/Byron/gitoxide", branch = "main" }
git-object = { version = "0.13.0", git = "https://github.com/Byron/gitoxide", branch = "main" }
git-odb = { version = "0.20.2", git = "https://github.com/Byron/gitoxide", branch = "main" }
git-pack = { version = "0.9.0", git = "https://github.com/Byron/gitoxide", branch = "main", features = ["pack-cache-lru-static"] }
git-packetline = { version = "0.9.1", git = "https://github.com/Byron/gitoxide", branch = "main", features = ["async-io"] }
git-ref = { version = "0.6.0", git = "https://github.com/Byron/gitoxide", branch = "main" }
git-repository = { version = "0.7.2", git = "https://github.com/Byron/gitoxide", branch = "main", default-features = false, features = ["one-stop-shop", "unstable", "git-traverse"] }
git-traverse = { version = "0.7.2", git = "https://github.com/Byron/gitoxide", branch = "main" }
git2 = "0.13.20"
gitarena-macros = { path = "gitarena-macros" }
hex = "0.4.3"
lazy_static = "1.4.0"
lettre = { version = "0.10.0-alpha.2", features = ["smtp-transport", "tokio02", "tokio02-native-tls"] }
lettre_email = "0.9.4"
log = "0.4.14"
memmem = "0.1.1"
notify = "5.0.0-pre.13"
num_cpus = "1.13.0"
qstring = "0.7.2"
rand = "0.7.3"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json"] }
rust-argon2 = { version = "0.8.3", features = ["crossbeam-utils"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.4.2", features = ["runtime-actix-native-tls", "chrono", "json", "postgres", "tls"] }
tempfile = "3.2.0"
tera = { version = "1.12.1", features = ["builtins"] }
thiserror = "1.0.26"
time = "0.2.27"
tinytemplate = "1.2.1"
toml = "0.5.8"

[build-dependencies]
config_struct = { version = "0.5.0", features = ["toml-parsing"] }
