[package]
name = "gitarena"
version = "0.0.1"
authors = ["Mari <me@cutegirl.tech>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mellowagain/gitarena"
publish = false

[workspace]
members = [".", "gitarena-macros", "gitarena-ssh"]

[dependencies]
actix-files = "0.5.0"
actix-identity = "0.3.1"
actix-rt = "1.1.1"
actix-web = "3.2.0"
anyhow = "1.0.41"
askalono = "0.4.3"
async-compat = "0.2.1"
async-compression = { version = "0.3.8", features = ["gzip", "tokio-02"] }
async-process = "1.2.0"
async-recursion = "0.3.2"
async-trait = "0.1.51"
base64 = "0.13.0"
bstr = "0.2.16"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-humanize = "0.2.1"
enum-display-derive = "0.1.1"
fs_extra = "1.2.0"
futures = "0.3.16"
futures-locks = "0.6.0"
git-repository = { version = "0.12.0", features = ["async-network-client", "one-stop-shop", "max-performance", "unstable"] }
git2 = "0.13.23"
gitarena-macros = { path = "gitarena-macros" }
heim = { version = "0.1.0-rc.2", git = "https://github.com/mellowagain/heim", features = ["host", "cpu", "memory", "process"] }
hex = "0.4.3"
ipnetwork = { version = "0.17.0", features = ["serde"] }
lazy_static = "1.4.0"
lettre = { version = "0.10.0-alpha.2", features = ["smtp-transport", "tokio02", "tokio02-native-tls"] }
lettre_email = "0.9.4"
log = "0.4.14"
memmem = "0.1.1"
notify = "5.0.0-pre.13"
num_cpus = "1.13.0"
qstring = "0.7.2"
rand = "0.7.3"
regex = "1.5.4"
reqwest = { version = "0.10.10", features = ["json", "stream"] }
rust-argon2 = { version = "0.8.3", features = ["crossbeam-utils"] }
rustc_version_runtime = "0.2.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.4.2", features = ["runtime-actix-native-tls", "chrono", "json", "ipnetwork", "postgres", "tls"] }
tempfile = "3.2.0"
tera = { version = "1.12.1", features = ["builtins"] }
thiserror = "1.0.26"
time = "0.2.27"
tinytemplate = "1.2.1"
tokio-tar = "0.1.0"
toml = "0.5.8"
tracing = "0.1.28"
tracing-appender = "0.1.2"
tracing-futures = { version = "0.2.5", features = ["futures-03", "tokio"] }
tracing-subscriber = { version = "0.2.24", features = ["json"] }
tracing-unwrap = "0.9.2"
zip = { version = "0.5.13",  default-features = false, features = ["deflate", "time"] }
