[package]
name = "gitarena"
version = "0.0.0"
authors = ["mellowagain <me@cutegirl.tech>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mellowagain/gitarena"
description = "Software development platform with built-in vcs, issue tracking and code review"
homepage = "https://gitarena.com"

[[bin]]
name = "gitarena"

[workspace]
members = [".", "gitarena-macros", "gitarena-ssh"]

[profile.release]
lto = true

[dependencies]
actix-files = "0.6.0-beta.14"
actix-identity = "0.4.0-beta.7"
actix-multipart = "0.4.0-beta.12"
actix-rt = "2.6.0"
actix-web = { version = "4.0.0-beta.20", features = ["secure-cookies"] }
anyhow = "1.0.52"
askalono = { version = "0.4.4", git = "https://github.com/mellowagain/askalono" } # Currently uses my own fork until https://github.com/jpeddicord/askalono/pull/72 is merged
async-compat = "0.2.1"
async-compression = { version = "0.3.8", features = ["gzip", "tokio"] }
async-process = "1.3.0"
async-recursion = "1.0.0"
async-trait = "0.1.52"
awc = { version = "3.0.0-beta.18", features = ["rustls"] } # awc uses rustls for the time being because of version conflicts with openssl
base64 = "0.13.0"
bstr = "0.2.16"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-humanize = "0.2.1"
derive_more = "0.99.17"
fs_extra = "1.2.0"
futures = "0.3.19"
futures-locks = "0.7.0"
git-repository = { version = "0.13.0", features = ["async-network-client", "max-performance", "one-stop-shop", "unstable"] }
git2 = "0.13.25"
gitarena-macros = "0.0.0"
heim = { version = "0.1.0-rc.2", git = "https://github.com/mellowagain/heim", features = ["host", "cpu", "memory", "process"] }
hex = "0.4.3"
image = "0.23.14"
ipnetwork = { version = "0.17.0", features = ["serde"] } # Will be upgraded to v0.18.0 when sqlx also upgrades to it (to prevent incompatibilities)
lazy_static = "1.4.0"
lettre = { version = "0.10.0-rc.4", features = ["smtp-transport", "tokio1", "tokio1-native-tls"] }
log = "0.4.14"
md5 = "0.7.0"
memmem = "0.1.1"
multimap = { version = "0.8.3", features = ["serde"] }
notify = "5.0.0-pre.13"
num_cpus = "1.13.1"
oauth2 = { version = "4.1.0", default-features = false, git = "https://github.com/mellowagain/oauth2-rs" }
qstring = "0.7.2"
rand = "0.8.4"
regex = "1.5.4"
rust-argon2 = { version = "1.0.0", features = ["crossbeam-utils"] }
rustc_version_runtime = "0.2.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
sqlx = { version = "=0.5.7", features = ["chrono", "ipnetwork", "json", "postgres", "runtime-actix-native-tls", "tls"] } # Pinned to 0.5.7 as everything higher introduces cyclic dependencies: https://github.com/tkaitchuck/ahash/issues/95
tempfile = "3.3.0"
tera = { version = "1.15.0", features = ["builtins"] }
time = "0.3.5"
tinytemplate = "1.2.1"
tokio-tar = "0.3.0"
toml = "0.5.8"
tracing = "0.1.29"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.6", features = ["env-filter", "json", "std"] }
tracing-unwrap = "0.9.2"
zip = { version = "0.5.13",  default-features = false, features = ["deflate", "time"] }

[patch.crates-io]
gitarena-macros = { path = "gitarena-macros" }
