[package]
name = "gitarena-common"
version = "0.0.0"
authors = ["mellowagain <me@cutegirl.tech>"]
edition = "2021"

[dependencies]
anyhow = "1.0.52"
bincode = "1.3.3"
console-subscriber = { version = "0.1.3", features = ["parking_lot"] }
gitarena-macros = "0.0.0"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.133", features = ["derive"] }
tracing = "0.1.29"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.6", features = ["env-filter", "json", "std"] }
tracing-unwrap = "0.9.2"
