[package]
name = "gitarena-macros"
version = "0.0.0"
authors = ["mellowagain <me@cutegirl.tech>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mellowagain/gitarena"
description = "Helper macros for GitArena"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.73", features = ["full"] }
