[package]
name = "gitarena-workhorse"
version = "0.0.0"
authors = ["mellowagain <me@cutegirl.tech>"]
edition = "2021"

[dependencies]
anyhow = "1.0.52"
console-subscriber = { version = "0.1.3", features = ["parking_lot"] }
futures = "0.3.19"
futures-locks = "0.7.0"
gitarena-common = { version = "0.0.0", path = "../gitarena-common" }
log = "0.4.14"
parity-tokio-ipc = "0.9.0"
tokio = { version = "1.15.0", features = ["full", "tracing"] }
tracing = "0.1.29"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.6", features = ["env-filter", "json", "std"] }
tracing-unwrap = "0.9.2"
